2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_font.*, 
	* gameswf/gameswf_freetype.cpp:
	The basic work with dynamic fonts is completed

2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_font.cpp: 
	* gameswf/gameswf_freetype.*: added handler of bold & italic styles (dynamic fonts)
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: fixed compiler warning

2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h,
	* gameswf/gameswf_font.*,
	* gameswf/gameswf_text.*,
	* gameswf/gameswf_freetype.*:
	Work with dynamic fonts
	
2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_font.cpp,
	* gameswf/gameswf_freetype.*: added BearingX & BearingY
	
2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_freetype.cpp: added get_fontfile(...) function,
	this function gets font file name by font name (for Win32 only)

2007-06-02  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: applied patch from Francois Guibert,
	fixed bug about the "Var" thing of text fields.

2007-05-29  Vitaly Alexeev <tishka92@yahoo.com>

	fixed bug #1727294 
	* gameswf/gameswf_environment.*: parse_path() is static now,
	it's useful outside of class too
	* gameswf/gameswf_character.*: added find_target()
	* gameswf/gameswf_sprite.cpp: removed set_text_value from set_member(),
	first: reduces performance, second: VAR from text field is a link to 
	variable in sprite_instance therefore we need to get it value in advance() time
	* gameswf/gameswf_text.*: if VAR is set then 
	- set_text_value() assigns text value to new text & call VAR->set_member()
	- get_text_value() gets text value from VAR->get_member()
	if VAR is changed outside of text_field then text_field gets new text value in
	advance()

2007-05-29  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_config.h,
	* gameswf/gameswf.h,
	* gameswf/gameswf_font.*,
	* gameswf/gameswf_fontlib.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/gameswf_text.cpp,