@@ -1,3 +1,8 @@
+2007-06-09  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_text.cpp: default fontsize is 12
+	* gameswf/gameswf_freetype.cpp: if fontfile is't found then 'Times.ttf' is used 
+
 2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_font.*, 
